--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <h2>Connect With Me</h2>
       <p>
         🔗 GitHub: <a href="https://github.com/arun-sw" target="_blank">https://github.com/arun-sw</a><br>
-        💼 LinkedIn: <a href="https://linkedin.com/in/arunkumar-murugan" target="_blank">linkedin.com/in/arunkumar-murugan</a><br>
+        💼 LinkedIn: <a href="https://www.linkedin.com/in/arunkumar-murugan-5b6173274" target="_blank">linkedin.com/in/arunkumar-murugan</a><br>
         📞 Phone:   <a href="tel:+918667753191">+91 8667753191</a></p>
      </p>
     </section>
