--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <p>
     Developed a full-stack web application for quiz management. Admins can add, edit, and delete quiz questions, while users can take quizzes and view scores. 
     The backend is built using Spring Boot and MySQL, and the frontend uses HTML, CSS, and JavaScript.
+    <a href="https://wholesome-fascination-production.up.railway.app/" target="_blank">https://wholesome-fascination-production.up.railway.app/a><br>
   </p>
 
   <h3>Data Visualization Dashboard</h3>
