--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
 
     <footer>
       <a class="btn" href="Arunkumar_Murugan_Resume.pdf" download>📄 Download My Resume</a>
+      <iframe src="Arunkumar_Murugan_Resume.pd" width="100%" height="800px" style="border:none;"></iframe>
+
     </footer>
   </div>
 
