--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <footer>
       <a class="btn" href="Arunkumar_Murugan_Resume.pdf" download>📄 Download My Resume</a>
-      <a href="Arunkumar_Murugan_Resume.pdf" target="_blank">View Resume</a>
+       <a class="btn" href="Arunkumar_Murugan_Resume.pdf" target="_blank">View Resume</a>
 
     </footer>
   </div>
