--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
     </section>
 
     <footer>
-      <a class="btn" href="Arunkumar_Murugan_Resume.pdf" download>📄 Download My Resume</a>
-       <a class="btn" href="Arunkumar_Murugan_Resume.pdf" target="_blank">View Resume</a>
+     <div class="resume-buttons">
+                <a class="btn download-btn" href="Arunkumar_Murugan_Resume.pdf" download>📄 Download My Resume</a>
+                <a class="btn view-btn" href="Arunkumar_Murugan_Resume.pdf" target="_blank">View Resume</a>
+    </div>
 
     </footer>
   </div>
