--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
       <p id="typewriter"></p>
       <p>Email: <a href="mailto:arunml2205@gmail.com">arunml2205@gmail.com</a></p>
       <p>Location: Coimbatore, Tamil Nadu</p>
-      <p>Website: <a href="https://arunkumar2205.github.io" target="_blank">arunkumar2205.github.io</a></p>
     </header>
 
     <section class="section">
       <h2>Career Objective</h2>
       <p>
-        Aspiring to become a successful Software Engineer, where I can apply my technical skills to contribute to innovative and scalable software solutions. 
-        I aim to work in a dynamic and growth-oriented environment that nurtures learning and professional development.
+       A passionate and dedicated BCA student seeking an entry-level role in software development or web technologies. Eager to apply academic knowledge,
+        enhance technical skills, and contribute to real-world projects. Strong interest in Java, full-stack development, and modern tools.
       </p>
     </section>
-
     <section class="section">
       <h2>About Me</h2>
       <p>
@@ -34,7 +32,6 @@
         I enjoy building intuitive interfaces and writing clean backend logic that powers efficient solutions.
       </p>
     </section>
-
     <section class="section">
       <h2>Skills</h2>
       <ul>
@@ -53,7 +50,7 @@
   <p>
     Developed a full-stack web application for quiz management. Admins can add, edit, and delete quiz questions, while users can take quizzes and view scores. 
     The backend is built using Spring Boot and MySQL, and the frontend uses HTML, CSS, and JavaScript.
-    <a href="https://wholesome-fascination-production.up.railway.app/" target="_blank">https://wholesome-fascination-production.up.railway.app</a><br>
+    <a href="https://wholesome-fascination-production.up.railway.app/" target="_blank"></a><br>
   </p>
 
   <h3>Data Visualization Dashboard</h3>
