--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Arunkumar Murugan - Portfolio</title>
-  <link rel="AK Logo in Blue and White.jpg" type="image/jpeg" href="AK Logo in Blue and White.jpg">
+  <link rel="icon" type="image/jpeg" href="AK_Logo.jpg">
   <link rel="stylesheet" href="style.css" />
 </head>
   
