--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Arunkumar Murugan - Portfolio</title>
-  <link rel="icon" type="image/jpeg" href="AK_Logo.jpg">
+  <link rel="icon" type="image/png" href="Ak_logo.png">
   <link rel="stylesheet" href="style.css" />
 </head>
   
